@@ -1,5 +1,8 @@
 2015-04-24  Dirk Eddelbuettel  <edd@debian.org>
 
+	* src/parse.cpp (getValue): Use timegm() as we are translating a UTC
+	time into time_t, not a local time
+
 	* tests/*.R: Simplify tests call as we no longer need explicit sorting
 	* tests/*.Rout.save: Update reference output as well
 
